Removed guava usage when streams do a better, more readable job